# spectre

./: Game2.hs  Game3.hs  Game4.hs  Main.hs  Makefile  README.md  Spectre.cabal
Control/Monad/: Suspend.hs  Vars.hs
