name:                Spectre
version:             0.1.0.0
synopsis:            Spectre Game
license:             AllRightsReserved
license-file:        LICENSE
author:              Jon Purdy
maintainer:          evincarofautumn@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >= 1.8

executable Spectre
  main-is:
    Main.hs
  build-depends:
    base == 4.5.*,
    SDL == 0.6.*
